Amend for SS4 migration where was missing `use` cases

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,8 +1,10 @@
 ---
 Name: todoextension
-After: 'framework/*','cms/*'
+After:
+  - 'framework/*'
+  - 'cms/*'
 ---
 
-SiteTree:
+SilverStripe\CMS\Model\SiteTree:
   extensions:
     - Silverstripe\ToDo\Extension
